# transifexlib

./: .gitignore  README.md  pyproject.toml  setup.py  transifexlib.py
